core/iox_query_influxql/src/plan/snapshots/iox_query_influxql__plan__planner__tests__select__subqueries__distinct.snap
---
source: iox_query_influxql/src/plan/planner.rs
expression: "plan(\"SELECT value FROM (SELECT DISTINCT(usage_idle) AS value FROM cpu)\")"
---
Sort: time AS time ASC NULLS LAST [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), value:Float64;N]
  Projection: Dictionary(Int32, Utf8("cpu")) AS iox::measurement, time AS time, value AS value [iox::measurement:Dictionary(Int32, Utf8), time:Timestamp(Nanosecond, None), value:Float64;N]
    Sort: time ASC NULLS LAST [time:Timestamp(Nanosecond, None), value:Float64;N]
      Distinct: [time:Timestamp(Nanosecond, None), value:Float64;N]
        Projection: TimestampNanosecond(0, None) AS time, cpu.usage_idle AS value [time:Timestamp(Nanosecond, None), value:Float64;N]
          Filter: cpu.usage_idle IS NOT NULL [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
            TableScan: cpu [cpu:Dictionary(Int32, Utf8);N, host:Dictionary(Int32, Utf8);N, region:Dictionary(Int32, Utf8);N, time:Timestamp(Nanosecond, None), usage_idle:Float64;N, usage_system:Float64;N, usage_user:Float64;N]
